# autosquash

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
examples/: create_demo_repo.rs
git_commands/: Cargo.toml
src/: lib.rs  main.rs
tests/tests/: mod.rs
