[package]
name = "autosquash"
version = "0.1.1"
authors = ["Tim Hutt <timh@graphcore.ai>"]
edition = "2018"
license = "MIT"
description = "Automatically squash to the merge base"
keywords = ["git", "rebase"]
repository = "https://github.com/Timmmm/autosquash"

[dependencies]
anyhow = "1.0.40"
argh = "0.1.4"
colored = "2.0.0"
env_logger = "0.9.0"
git_commands = { path = "git_commands", version = "0.2.0" }
log = "0.4.14"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

[dev-dependencies]
# For tests
tempfile = "3.1.0"
rand = "0.8.3"
